# modern_cmake

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
game1/: CMakeLists.txt
game2/: CMakeLists.txt
tools/: android_arm64_v8a_toolchain.cmake  android_x86_64_toolchain.cmake
tools/appveyor-scripts/: before-build.ps1  build.ps1
tools/travis-scripts/: before-install.sh  run-script.sh
